<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_group_chat"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cse110.liveasy.GroupChat">

    <Button
        android:text="Send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="21dp"
        android:layout_marginEnd="21dp"
        android:id="@+id/send_msg_btn" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text|textNoSuggestions"
        android:ems="10"
        android:layout_alignTop="@+id/send_msg_btn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/msg_input"
        android:layout_toLeftOf="@+id/send_msg_btn"
        android:layout_toStartOf="@+id/send_msg_btn" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_toStartOf="@+id/send_msg_btn"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/send_msg_btn"
        android:layout_alignEnd="@+id/send_msg_btn"
        android:layout_above="@+id/send_msg_btn"
        android:id="@+id/chat_scroll">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/msg_lin_layout"></LinearLayout>


    </ScrollView>

</RelativeLayout>
